# wordle_clone

./: .gitignore  CMakeLists.txt  README.md  WordleBackend.cpp  WordleBackend.h  build.sh  main.cpp  main.qml  qml.qrc  wordle  wordle.pro  words.txt
src/: CMakeLists.txt  main.cpp
src/controller/: CMakeLists.txt  GameController.cpp  GameController.h  WordleController.cpp  WordleController.h
src/model/: CMakeLists.txt  GameModel.cpp  GameModel.h  WordEvaluator.cpp  WordEvaluator.h  WordModel.cpp  WordModel.h
src/view/: CMakeLists.txt  MainView.qml
src/view/components/: GameGrid.qml  GridItem.qml  Header.qml  InfoBox.qml  PlayAgainButton.qml
